Upgraded all components to latest stable releases including moving to Java 21.